--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "jquery": "~3.1.1",
     "fontfaceobserver": "~2.0.7",
     "loadcss": "~1.2.1",
-    "flexslider" :"~2.6.4"
+    "flexslider" :"~2.6.4",
+    "fancyBox": "2.1.5"
   }
 }
 
